single column layouts

--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,30 +58,34 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for July 7<sup>th</sup></h1>
+    <h1>GDWD 105 Agenda for July 26<sup>th</sup></h1>
     <div id="agenda">
       <!-- <h2>Office Hours (4:30-5:30): Available Upon Request (no guarantees on same-day requests!)</h2> -->
       <h2>Announcements (6:10)</h2>
       <h3>(if you're not here by 6:10, you're tardy!)</h3>
-      <h2>Period 1 (6:00-7:10): FINAL EVAL</h2>
+      <h2>Period 1 (6:00-7:10): Lab Time - Completed Gallery/Portfolio</h2>
       <h3>SHORT BREAK (10 MIN)</h3>
-      <h2>Period 2 (7:20-8:30): FINAL EVAL</h2>
+      <h2>Period 2 (7:20-8:30): Lab Time - Completed Gallery/Portfolio</h2>
       <h3>DINNER BREAK (45 MIN)</h3>
-      <h2>Period 3 (9:15-11:00): FINAL EVAL</h2>
+      <h2>Period 3 (9:15-11:00): Lab Time - Completed Gallery/Portfolio</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
+      <h2 class="assnItem highlight">
+        <span>Portfolio - Finalized Gallery | Exercise</span>
+        <span>Due TONIGHT at 11pm</span>
+      </h2>
+      <h2 class="assnItem highlight">
+        <span>Portfolio Final Submission | Final Project</span>
+        <span>Due TONIGHT at 11pm</span>
+      </h2>
       <h2 class="assnItem warning">
-        <span>Mock Final Eval (Hulu) - Complete | Project</span>
+        <span>Portfolio - Finalized About Me | Exercise</span>
         <span>Due YESTERDAY at 11pm</span>
       </h2>
       <h2 class="assnItem warning">
-        <span>Portfolio Web Portal | Extra Credit</span>
-        <span>Due YESTERDAY at 11pm</span>
-      </h2>
-      <h2 class="assnItem warning">
-        <span>UI/UX Implementation | Extra Credit</span>
+        <span>Portfolio - Finalized Contact Page | Exercise</span>
         <span>Due YESTERDAY at 11pm</span>
       </h2>
     </div>
