--- a/cookbook/recipes/single-column-center-margin/page1.html
+++ b/cookbook/recipes/single-column-center-margin/page1.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Single Column Page Layout - Center (margin)</title>
+        <title>Single Column - Center (margin) | Page Layout</title>
         <link href="css/common.css" rel="stylesheet">
     </head>
     <body>
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="center-column">
-            <h1>Single Column Layout - Center (margin)</h1>
+            <h1>Single Column - Center (margin)</h1>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Cupiditate necessitatibus ab ipsum? Natus suscipit 
