--- a/cookbook/recipes/single-column-left/page0.html
+++ b/cookbook/recipes/single-column-left/page0.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Single Column - Center (margin) | Page Layout</title>
+        <title>Single Column - Left | Page Layout</title>
         <link href="css/basic.css" rel="stylesheet">
     </head>
     <body>
         <div class="center-column">
-            <h1>Single Column - Center (margin)</h1>
+            <h1>Single Column - Left</h1>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Cupiditate necessitatibus ab ipsum? Natus suscipit 
