--- a/cookbook/recipes/single-column-right/page1.html
+++ b/cookbook/recipes/single-column-right/page1.html
@@ -3,12 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Single Column - Center (margin) | Page Layout</title>
-        <link href="css/basic.css" rel="stylesheet">
+        <title>Single Column - Right | Page Layout</title>
+        <link href="css/common.css" rel="stylesheet">
     </head>
     <body>
+        <div id="navbar">
+            <div id="navbar-column">
+                <a href="#">BRAND NAME</a>
+                <a href="#">LINK 1</a>
+                <a href="#">LINK 2</a>
+                <a href="#">LINK 3</a>
+            </div>
+        </div>
         <div class="center-column">
-            <h1>Single Column - Center (margin)</h1>
+            <h1>Single Column - Right</h1>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Cupiditate necessitatibus ab ipsum? Natus suscipit 
@@ -34,6 +42,19 @@
                 illum vitae dicta tempora aperiam repellendus sed 
                 aspernatur corrupti consequatur culpa ratione dolor
                 tempore quas ipsa.
+            </p>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Quos sequi, facere ex impedit blanditiis veniam sunt 
+                consectetur odio doloremque molestiae deleniti dolores 
+                obcaecati consequuntur dolorum? Voluptatem quidem 
+                ratione temporibus autem!
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Dolorum nemo tenetur quis corporis cumque nostrum 
+                temporibus tempora esse? Ullam illo, incidunt veniam quasi 
+                quidem expedita animi esse nesciunt minus ab.
             </p>
         </div>
     </body>
