--- a/cookbook/recipes/single-column-center-margin/page2.html
+++ b/cookbook/recipes/single-column-center-margin/page2.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Single Column Page Layout - Center (margin)</title>
+        <title>Single Column - Center (margin) | Page Layout</title>
         <link href="css/fancy.css" rel="stylesheet">
     </head>
     <body>
@@ -17,7 +17,7 @@
         </div>
         <div class="light-container">
             <div class="center-column">
-                <h1>Single Column Layout - Center (margin)</h1>
+                <h1>Single Column - Center (margin)</h1>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Cupiditate necessitatibus ab ipsum? Natus suscipit 
