--- a/cookbook/appetizers/web-dev-startup.html
+++ b/cookbook/appetizers/web-dev-startup.html
@@ -807,7 +807,7 @@
                             <p>
                                 If you've used this computer before, and you 
                                 see your repository, you can just select it,
-                                and move on to Step 5.
+                                and <a href="#p3_step5">move on to Step 5</a>.
                             </p>
                             <p>
                                 If not, click the Add dropdown, and select 
@@ -915,6 +915,7 @@
                     </div>
                 </li>
                 <li>
+                    <h2 id="p3_step5" class="invisibleInnerAnchorTarget"></h2>
                     <div class="sideBySide">
                         <div class="textContainer">
                             <p>
