--- a/cookbook/appetizers/web-dev-startup.html
+++ b/cookbook/appetizers/web-dev-startup.html
@@ -68,7 +68,7 @@
         </nav>
         
         <header id="title" class="">
-            <h1>Web Dev Setup Tutorial</h1>
+            <h1>Web Dev Startup Tutorial</h1>
             <h3>The Appetizer to the Main Course</h3>
         </header>
         
@@ -175,6 +175,7 @@
                     </div>
                 </li>
                 <li>
+                    <h2 id="p1_step4" class="invisibleInnerAnchorTarget"></h2>
                     <div class="sideBySide">
                         <div class="textContainer">
                             <p>
