three columns "traditional"

--- a/cookbook/recipes/single-column-center-margin/page1.html
+++ b/cookbook/recipes/single-column-center-margin/page1.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Single Column - Center (margin) | Page Layout</title>
+        <title>Single Column - Center (margin)</title>
         <link href="css/common.css" rel="stylesheet">
     </head>
     <body>
