--- a/cookbook/recipes/three-columns-traditional-grid/page0.html
+++ b/cookbook/recipes/three-columns-traditional-grid/page0.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Three Columns - Sidebars (grid)</title>
+        <title>Three Columns - Traditional (grid)</title>
         <link href="css/basic.css" rel="stylesheet">
     </head>
     <body>
         <div id="three-columns">
             <div id="column-1">
-                <h1>Three Columns - Sidebars (grid)</h1>
+                <h1>Three Columns - Traditional (grid)</h1>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Cupiditate necessitatibus ab ipsum? Natus suscipit 
