--- a/cookbook/recipes/two-columns-sidebar-grid/page3.html
+++ b/cookbook/recipes/two-columns-sidebar-grid/page3.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Two Columns - Sidebar (grid) | Page Layout</title>
+        <title>Two Columns - Sidebar (grid)</title>
         <link href="css/fancy-right.css" rel="stylesheet">
     </head>
     <body>
