--- a/cookbook/recipes/three-columns-sidebars-grid/page1.html
+++ b/cookbook/recipes/three-columns-sidebars-grid/page1.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Three Columns - Sidebars (grid) | Page Layout</title>
+        <title>Three Columns - Sidebars (grid)</title>
         <link href="css/sidebars.css" rel="stylesheet">
     </head>
     <body>
