--- a/cookbook/recipes/two-columns-equal-flex/page1.html
+++ b/cookbook/recipes/two-columns-equal-flex/page1.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Two Columns - Equal Size (flex) | Page Layout</title>
+        <title>Two Columns - Equal Size (flex)</title>
         <link href="css/common.css" rel="stylesheet">
     </head>
     <body>
