--- a/cookbook/troubleshooting.html
+++ b/cookbook/troubleshooting.html
@@ -59,6 +59,7 @@
                     <button id="cardsButton" class="hide">Cards View</button>
                     <button id="listButton" class="hide">List View</button>
                     <button id="backButton" class="hide">Back to <span id="backTo"></span></button>
+                    <button id="commentsButton" class="hide"><span id="hideCommentsLabel">Hide</span><span id="showCommentsLabel">Show</span> Comments</button>
                 </div>
             </header>
         </nav>
