--- a/cookbook/appetizers/web-dev-startup.html
+++ b/cookbook/appetizers/web-dev-startup.html
@@ -1476,10 +1476,19 @@
                                     your site is live.
                                 </strong>
                             </p>
+                            <br>
                             <p>
                                 Scroll down to the bottom of the 
                                 right sidebar and click on 
                                 "github-pages" under "Environments".
+                            </p>
+                            <p>
+                                <strong>
+                                    NOTE: Github recently updated their UI,
+                                    and you may see "Deployments" instead of
+                                    "Environments"; if so, click "Deployments"
+                                    instead for this step.
+                                </strong>
                             </p>
                         </div>
                         <div class="imageContainer">
@@ -1489,6 +1498,13 @@
                             >
                             <figcaption>
                                 The Environments section in github.com
+                            </figcaption>
+                            <img 
+                                src="images/web-dev-startup/deployments.png" 
+                                alt="The Deployments section in github.com" 
+                            >
+                            <figcaption>
+                                The Deployments section in github.com
                             </figcaption>
                         </div>
                     </div>
@@ -1505,6 +1521,18 @@
                                 the name of your repository, 
                                 from your README.md file). 
                             </p>
+                            <p>
+                                <strong>
+                                    NOTE: Again, Github recently updated their UI,
+                                    so you may see a different view than the 
+                                    first screenshot.
+                                    <br><br>
+                                    If so, refer to the second
+                                    screenshot, and click the "pop-out"
+                                    icon at the far right of the most recent 
+                                    deployment.
+                                </strong>
+                            </p>
                         </div>
                         <div class="imageContainer">
                             <img 
@@ -1513,8 +1541,18 @@
                             >
                             <figcaption>
                                 The Deployments page in github.com, 
-                                where you can access 
-                                your homepage
+                                where you can access your homepage<br>via the 
+                                "View Deployment" button
+                            </figcaption>
+                            <img 
+                                src="images/web-dev-startup/deploymentpage_new.png" 
+                                alt="The (new) Deployments page in github.com, where you can access your homepage" 
+                            >
+                            <figcaption>
+                                The (new) Deployments page in github.com, 
+                                where you can access your homepage<br>via the 
+                                "popout" icon at the far right of the most 
+                                recent deployment 
                             </figcaption>
                         </div>
                     </div>
