flex and display grid

--- a/cookbook/seasonings/display-flex.html
+++ b/cookbook/seasonings/display-flex.html
@@ -34,7 +34,7 @@
             and inline elements are arranged in line, same as usual.
         </p>
 
-        <p><code>display: block;</code></p>
+        <h4>display: block;</h4>
 
         <div class="normal-container">
             <div class="box">A</div>
@@ -49,7 +49,7 @@
             on the container, we'll see the elements inside change.
         </p>
 
-        <p><code>display: flex;</code></p>
+        <h4>display: flex;</h4>
 
         <div class="flex-container">
             <div class="box">A</div>
@@ -117,6 +117,13 @@
                 target="_blank"
             >
                 mdn web docs
+            </a>
+            <br>
+            <a
+                href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/"
+                target="_blank"
+            >
+                CSS Tricks
             </a>
         </div>
     </body>
