--- a/cookbook/seasonings/flex.html
+++ b/cookbook/seasonings/flex.html
@@ -44,6 +44,14 @@
             Check out the Additional Resources section at the
             end if you want to dive deeper!
         </p>
+        <p class="warning">
+            NOTE 2: Despite the similarity in name and value, 
+            this property is NOT used to activate a Flexbox 
+            Container.
+            <br><br>
+            Only <code>display: flex;</code> can do that.
+            Don't get them confused!
+        </p>
         <p>
             It can be helpful to think of the flex property 
             as transforming Flexbox Items into a fluid, rather 
