grid-template-areas and grid-area

--- a/cookbook/seasonings/grid-template-columns.html
+++ b/cookbook/seasonings/grid-template-columns.html
@@ -174,21 +174,21 @@
         <div class="resources">
             <h4>Additional Resources</h4>
             <a 
-                href="https://www.w3schools.com/css/css_grid.asp"
+                href="https://www.w3schools.com/cssref/pr_grid-template-columns.php"
                 target="_blank"
             >
                 w3schools 
             </a>
             <br>
             <a
-                href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_grid_layout"
+                href="https://developer.mozilla.org/en-US/docs/Web/CSS/grid-template-columns"
                 target="_blank"
             >
                 mdn web docs
             </a>
             <br>
             <a
-                href="https://css-tricks.com/snippets/css/complete-guide-grid/"
+                href="https://css-tricks.com/almanac/properties/g/grid-template-columns/"
                 target="_blank"
             >
                 CSS Tricks
