two columns flex and week 3 in meal prep

--- a/cookbook/meal-prep.html
+++ b/cookbook/meal-prep.html
@@ -39,6 +39,7 @@
                         <div class="dropdown-items">
                             <h2><a href="meal-prep.html?category=week1">Week 1</a></h2>
                             <h2><a href="meal-prep.html?category=week2">Week 2</a></h2>
+                            <h2><a href="meal-prep.html?category=week3">Week 3</a></h2>
                         </div>
                     </div>
                     <h2><a href="./">Student Resources</a></h2>
