three column layout grid (and 2col improvement)

--- a/cookbook/meal-prep/two-column-grid-layouts/page6.html
+++ b/cookbook/meal-prep/two-column-grid-layouts/page6.html
@@ -16,6 +16,21 @@
                     <li><a href="#">Link 3</a></li>
                     <li><a href="#">Link 4</a></li>
                 </ul>
+                <!--
+                    Here's where we can add additional
+                    sets of content for the sidebar, and
+                    as long as they're h2 and ul elements
+                    paired together, they'll match visually!
+                -->
+                <h2>Other Links</h2>
+                <ul>
+                    <li><a href="#">Other Link 1</a></li>
+                    <li><a href="#">Other Link 2</a></li>
+                    <li><a href="#">Other Link 3</a></li>
+                    <li><a href="#">Other Link 4</a></li>
+                    <li><a href="#">Other Link 5</a></li>
+                    <li><a href="#">Other Link 6</a></li>
+                </ul>
             </div>
             <div id="main-content">
                 <h1>Two Columns - Grid</h1>
