flexbox drills instructor demo

--- a/cookbook/meal-prep/flexbox-drills/page11.html
+++ b/cookbook/meal-prep/flexbox-drills/page11.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>CSS Flexbox Drills</title>
         <link href="css/style.css" rel="stylesheet">
-        <link href="css/drill.css" rel="stylesheet">
+        <link href="css/drill.css" rel="stylesheet" data-meal-prep>
     </head>
     <body>  
         <h1>CSS Flexbox Drills</h1>
