single column layout drills instructor demo

--- a/cookbook/meal-prep/single-column-layouts-drills/page0.html
+++ b/cookbook/meal-prep/single-column-layouts-drills/page0.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>Single Column Layouts Drills</title>
         <link href="css/style.css" rel="stylesheet">
-        <link href="css/drill.css" rel="stylesheet" data-meal-prep>
+        <link href="css/drill_page0.css" rel="stylesheet" data-meal-prep>
     </head>
     <body>  
         <h1>CSS Grid Drills</h1>
