--- a/cookbook/examples/wiki-with-sidebar/index.html
+++ b/cookbook/examples/wiki-with-sidebar/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Wiki with Sidebar (Exercise)</title>
-        <link href="css/page0.css" rel="stylesheet" data-meal-prep>
+        <link href="css/style.css" rel="stylesheet" data-meal-prep>
     </head>
     <body>
         <div id="two-columns">
