--- a/cookbook/examples/wiki-with-sidebar/index.html
+++ b/cookbook/examples/wiki-with-sidebar/index.html
@@ -107,8 +107,8 @@
                             alt="ps3 interface"
                         >
                         <p>
-                            Final Fantasy XIV's PC beta version interface, 
-                            navigated by a point and click widget system
+                            Final Fantasy XIV's home console interface, 
+                            navigated by a cross-bar system
                         </p>
                     </div>
                     <div class="text-column">
