--- a/cookbook/meal-prep/single-column-layouts-drills/page3.html
+++ b/cookbook/meal-prep/single-column-layouts-drills/page3.html
@@ -9,7 +9,7 @@
         <link href="css/drill_page3.css" rel="stylesheet" data-meal-prep>
     </head>
     <body>  
-        <h1>CSS Grid Drills</h1>
+        <h1>Single Column Layouts Drills</h1>
 
         <section id="drill3">
             <h2>Drill 3</h2>
