Added hints to flexbox drills

--- a/cookbook/meal-prep/flexbox-drills/page1.html
+++ b/cookbook/meal-prep/flexbox-drills/page1.html
@@ -16,7 +16,7 @@
             <img src="images/drill1.png" alt="Drill 1">
             <p>
                 Turn the container below into a flexbox 
-                as in the image above.
+                as in the image above <br> (HINT: activate flexbox)
             </p>
             <div class="solution">
                 <div id="container-1" class="container">
