--- a/cookbook/meal-prep/flexbox-drills/page10.html
+++ b/cookbook/meal-prep/flexbox-drills/page10.html
@@ -16,7 +16,8 @@
             <img src="images/drill10.png" alt="Drill 10">
             <p>
                 Turn the container below into a flexbox and expand the
-                left block as in the image above.
+                left block as in the image above. (HINT: similar to 
+                Drill 9, but on a different block)
             </p>
             <div class="solution">
                 <div id="container-10" class="container">
