--- a/cookbook/meal-prep/flexbox-drills/page2.html
+++ b/cookbook/meal-prep/flexbox-drills/page2.html
@@ -16,7 +16,7 @@
             <img src="images/drill2.png" alt="Drill 2">
             <p>
                 Turn the container below into a flexbox 
-                as in the image above.
+                as in the image above. <br>(HINT: same as Drill 1)
             </p>
             <div class="solution">
                 <div id="container-2" class="container">
