--- a/cookbook/meal-prep/flexbox-drills/page4.html
+++ b/cookbook/meal-prep/flexbox-drills/page4.html
@@ -16,7 +16,8 @@
             <img src="images/drill4.png" alt="Drill 4">
             <p>
                 The container below is already a column flexbox; center the
-                content as in the image above.
+                content as in the image above. (HINT: you'll need to ALIGN
+                both the Flex ITEMS and the TEXT)
             </p>
             <div class="solution">
                 <div id="container-4" class="container">
