--- a/cookbook/meal-prep/flexbox-drills/page5.html
+++ b/cookbook/meal-prep/flexbox-drills/page5.html
@@ -18,7 +18,9 @@
                 Turn the container below into a flexbox, 
                 and center the single child inside of it
                 (both horizontally and vertically), 
-                as in the image above.
+                as in the image above. (HINT: use the Flex Container
+                properties which affect the Flexbox's main-axis and 
+                cross-axis to center the content and items)
             </p>
             <div class="solution">
                 <div id="container-5" class="container">
