--- a/cookbook/meal-prep/flexbox-drills/page9.html
+++ b/cookbook/meal-prep/flexbox-drills/page9.html
@@ -16,7 +16,8 @@
             <img src="images/drill9.png" alt="Drill 9">
             <p>
                 Turn the container below into a flexbox and expand the
-                middle block as in the image above.
+                middle block as in the image above. (HINT: similar to 
+                Drill 8, but only on one block this time)
             </p>
             <div class="solution">
                 <div id="container-9" class="container">
