--- a/cookbook/meal-prep/flexbox-drills/page3.html
+++ b/cookbook/meal-prep/flexbox-drills/page3.html
@@ -16,7 +16,7 @@
             <img src="images/drill3.png" alt="Drill 3">
             <p>
                 Turn the container below into a column flexbox 
-                as in the image above.
+                as in the image above. (HINT: change the FLEXbox's DIRECTION)
             </p>
             <div class="solution">
                 <div id="container-3" class="container">
