--- a/cookbook/meal-prep/flexbox-drills/page6.html
+++ b/cookbook/meal-prep/flexbox-drills/page6.html
@@ -16,7 +16,8 @@
             <img src="images/drill6.png" alt="Drill 6">
             <p>
                 Turn the container below into a flexbox and add space between
-                the links as in the image above.
+                the links as in the image above. (HINT: are you JUSTIFY'ed
+                in adding SPACE-BETWEEN those Flex Items?)
             </p>
             <div class="solution">
                 <div id="container-6" class="container">
