--- a/cookbook/meal-prep/flexbox-drills/page7.html
+++ b/cookbook/meal-prep/flexbox-drills/page7.html
@@ -16,7 +16,9 @@
             <img src="images/drill7.png" alt="Drill 7">
             <p>
                 Turn the container below into a flexbox and add space between
-                the links (and link group) as in the image above.
+                the links (and link group) as in the image above. (HINT:
+                similar to Drill 6, but you may also need to deal with 
+                some ALIGNment issues affecting the Flex ITEMS)
             </p>
             <div class="solution">
                 <div id="container-7" class="container">
