--- a/cookbook/meal-prep/flexbox-drills/page8.html
+++ b/cookbook/meal-prep/flexbox-drills/page8.html
@@ -17,6 +17,7 @@
             <p>
                 Turn the container below into a flexbox and make each 
                 block equally sized as in the image above.
+                (HINT: use FLEX; as in, the property, not the box)
             </p>
             <div class="solution">
                 <div id="container-8" class="container">
