added hints to grid drills

--- a/cookbook/meal-prep/grid-drills/page1.html
+++ b/cookbook/meal-prep/grid-drills/page1.html
@@ -16,7 +16,7 @@
             <img src="images/drill1.png" alt="Drill 1">
             <p>
                 Turn the container below into a grid with two columns,
-                as in the image above.
+                as in the image above. (HINT: equal, fractional, column widths)
             </p>
             <div class="solution">
                 <div id="container-d1" class="container">
