--- a/cookbook/meal-prep/grid-drills/page2.html
+++ b/cookbook/meal-prep/grid-drills/page2.html
@@ -16,7 +16,8 @@
             <img src="images/drill2.png" alt="Drill 2">
             <p>
                 Turn the container below into a grid with three columns,
-                as in the image above.
+                as in the image above. (HINT: fractional widths, with the 
+                middle column twice as wide)
             </p>
             <div class="solution">
                 <div id="container-d2" class="container">
