--- a/cookbook/meal-prep/grid-drills/page4.html
+++ b/cookbook/meal-prep/grid-drills/page4.html
@@ -16,7 +16,8 @@
             <img src="images/drill4.png" alt="Drill 4">
             <p>
                 Turn the container below into a grid with three columns,
-                and reorder the cell areas as in the image above.
+                and reorder the cell areas as in the image above. (HINT:
+                reassign the grid-areas from Drill 3)
             </p>
             <div class="solution">
                 <div id="container-d4" class="container">
