--- a/cookbook/meal-prep/grid-drills/page6.html
+++ b/cookbook/meal-prep/grid-drills/page6.html
@@ -16,7 +16,9 @@
             <img src="images/drill6.png" alt="Drill 6">
             <p>
                 Turn the container below into a grid with two columns,
-                and reorder the cell areas as in the image above.
+                and reorder the cell areas as in the image above. (HINT: 
+                don't be intimidated by the text; this is actually simpler 
+                than the previous drill)
             </p>
             <div class="solution">
                 <div id="container-d6" class="container">
