--- a/cookbook/meal-prep/grid-drills/page3.html
+++ b/cookbook/meal-prep/grid-drills/page3.html
@@ -16,7 +16,8 @@
             <img src="images/drill3.png" alt="Drill 3">
             <p>
                 Turn the container below into a grid with three columns,
-                as in the image above.
+                as in the image above. (HINT: use areas that match the
+                numbers; this will help in the next drills)
             </p>
             <div class="solution">
                 <div id="container-d3" class="container">
