--- a/cookbook/meal-prep/grid-drills/page5.html
+++ b/cookbook/meal-prep/grid-drills/page5.html
@@ -16,7 +16,9 @@
             <img src="images/drill5.png" alt="Drill 5">
             <p>
                 Turn the container below into a grid with three columns,
-                and reorder the cell areas as in the image above.
+                and reorder the cell areas as in the image above. (HINT: 
+                two rows of template areas, with duplicates for areas 
+                that span multiple cells)
             </p>
             <div class="solution">
                 <div id="container-d5" class="container">
