--- a/cookbook/meal-prep/grid-drills/page7.html
+++ b/cookbook/meal-prep/grid-drills/page7.html
@@ -16,7 +16,7 @@
             <img src="images/drill1.png" alt="Drill 1">
             <p>
                 Turn the container below into a grid with two columns,
-                as in the image above.
+                as in the image above. (HINT: equal, fractional, column widths)
             </p>
             <div class="solution">
                 <div id="container-d1" class="container">
@@ -35,7 +35,8 @@
             <img src="images/drill2.png" alt="Drill 2">
             <p>
                 Turn the container below into a grid with three columns,
-                as in the image above.
+                as in the image above. (HINT: fractional widths, with the 
+                middle column twice as wide)
             </p>
             <div class="solution">
                 <div id="container-d2" class="container">
@@ -54,7 +55,8 @@
             <img src="images/drill3.png" alt="Drill 3">
             <p>
                 Turn the container below into a grid with three columns,
-                as in the image above.
+                as in the image above. (HINT: use areas that match the
+                numbers; this will help in the next drills)
             </p>
             <div class="solution">
                 <div id="container-d3" class="container">
@@ -70,7 +72,8 @@
             <img src="images/drill4.png" alt="Drill 4">
             <p>
                 Turn the container below into a grid with three columns,
-                and reorder the cell areas as in the image above.
+                and reorder the cell areas as in the image above. (HINT:
+                reassign the grid-areas from Drill 3)
             </p>
             <div class="solution">
                 <div id="container-d4" class="container">
@@ -86,7 +89,9 @@
             <img src="images/drill5.png" alt="Drill 5">
             <p>
                 Turn the container below into a grid with three columns,
-                and reorder the cell areas as in the image above.
+                and reorder the cell areas as in the image above. (HINT: 
+                two rows of template areas, with duplicates for areas 
+                that span multiple cells)
             </p>
             <div class="solution">
                 <div id="container-d5" class="container">
@@ -102,7 +107,9 @@
             <img src="images/drill6.png" alt="Drill 6">
             <p>
                 Turn the container below into a grid with two columns,
-                and reorder the cell areas as in the image above.
+                and reorder the cell areas as in the image above. (HINT: 
+                don't be intimidated by the text; this is actually simpler 
+                than the previous drill)
             </p>
             <div class="solution">
                 <div id="container-d6" class="container">
@@ -124,8 +131,8 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing 
                         elit. Ab vitae assumenda sed sunt et, rem commodi 
                         dolorum tenetur incidunt corporis maxime tempora 
-                        recusandae. Iste quasi, amet facilis maxime 
-                        recusandae eos!
+                        recusandae. Iste quasi, amet facilis maxime recusandae 
+                        eos!
                     </div>
                 </div>
             </div>
